# health-equity-challenge-ii

./: .env.example  .gitignore  README.md  main.py  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
app/: page.tsx
app/tract/[id]/: page.tsx
components/: EJScreenMap.tsx
lib/: tract-data.ts
notebooks/: build_analysis_minimal.ipynb  clean.ipynb  run_shap.ipynb
public/data/shap/: AL.json  AR.json  AZ.json  CA.json  CO.json  CT.json  DC.json  DE.json  FL.json  GA.json  IA.json  ID.json  IL.json  IN.json  KS.json  KY.json  LA.json  MA.json  MD.json  ME.json  MI.json  MN.json  MO.json  MS.json  MT.json  NC.json  ND.json  NE.json  NH.json  NJ.json  NM.json  (+18 more)
public/geojson/: AR.geojson  AZ.geojson  CT.geojson  DC.geojson  DE.geojson  HI.geojson  IA.geojson  ID.geojson  IN.geojson  KS.geojson  LA.geojson  MA.geojson  MD.geojson  ME.geojson  MN.geojson  MS.geojson  MT.geojson  ND.geojson  NE.geojson  NH.geojson  NJ.geojson  NM.geojson  NV.geojson  OK.geojson  OR.geojson  PR.geojson  RI.geojson  SC.geojson  SD.geojson  UT.geojson  VT.geojson  WI.geojson  WV.geojson  WY.geojson  manifest.json  state-fips.json
scripts/: build-shap-json.mjs  export_geojson.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: EJScreenMap.tsx  PolicyProposalDialog.tsx  ProposalMarkdown.tsx  StateProposalDialog.tsx
src/geojson/: CO.geojson  DC.geojson  IA.geojson  ID.geojson  IN.geojson  MS.geojson  MT.geojson
src/lib/: get-shap-for-tract.ts  ncsl-tool.ts  shap-labels.ts  state-summary.ts  static-asset-url.ts  tract-data.ts  web-search.ts
(+33 files in other folders)
